--- a/index.html
+++ b/index.html
@@ -284,7 +284,14 @@ img {
             <iframe src="./index.html" style="border:0px #ffffff none;" name="" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="100%" allowfullscreen></iframe>
         </section>
         
-      </section>
+        <section>
+            <a target="_bLank"
+                href="https://rank-fortress-digital-agency.github.io/elitesmilesdental-02-33/">https://rank-fortress-digital-agency.github.io/elitesmilesdental-02-33/</a><br>
+            <a target="_bLank"
+                href="http://elitesmilesdental-02-33.s3-website-ap-southeast-1.amazonaws.com/">http://elitesmilesdental-02-33.s3-website-ap-southeast-1.amazonaws.com/</a><br>
+            <a target="_bLank"
+                href="https://sage-druid-68083e.netlify.app/">https://sage-druid-68083e.netlify.app/</a>
+        </section>
 
     </div>
 
